# PyReport

./: .gitignore  DejaVuSans.pkl  Instruction.md  Main V2 interaktywny.py  Main v1.py  Main v2 interaktywny.py  Main.py  README.md  Testy jednostkowe.py  charts.py  config.py  config.yaml  csv_utils.py  gui_app.py  main.py  main_auto.py  processor.py  pyproject.toml  report.py  reporter.py  test_data.csv  uruchom_gui.bat  utils.py  visualizer.py
.github/workflows/: python-tests.yml
Tests/: test_csv_utils.py  test_report.py
test_data/: Preview_sample_1_csv.csv  Preview_sample_2_csv.csv  Preview_sample_3_csv.csv  Przyk_adowy_plik_CSV.csv  dane_czasowe.csv  dane_demograficzne.csv  sprzedaz_produkty.csv  studenci.csv
