[tool.poetry]
name = "csv-pdf-report-tool"
version = "0.1.0"
description = "Tool for converting CSV data into PDF reports with visualizations"
authors = ["Krzysztof Wojtkowiak", "Adam Pajer"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
matplotlib = "*"
reportlab = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
