[project]
name = "pyreport"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysiek",email = "k.wojtkowiak798@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
